--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,4 @@
-- name: Jekyll Actions
+name: Jekyll Actions
   # You may pin to the exact commit or the version.
   # uses: helaili/jekyll-action@d305e465c911226c731afb6db07c8bde20e03ced
   uses: helaili/jekyll-action@2.2.0
