--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,24 +1,19 @@
-name: Jekyll Actions
-  # You may pin to the exact commit or the version.
-  # uses: helaili/jekyll-action@d305e465c911226c731afb6db07c8bde20e03ced
-  uses: helaili/jekyll-action@2.2.0
-  with:
-    # The GITHUB_TOKEN secret
-    token: # optional
-    # The Jekyll environment to build
-    jekyll_env: # optional
-    # The Jekyll website source directory
-    jekyll_src: # optional
-    # Additional Jekyll build arguments (see https://jekyllrb.com/docs/configuration/options/#build-command-options)
-    jekyll_build_options: # optional
-    # The Jekyll Gemfile directory
-    gem_src: # optional
-    # The target branch name the sources get pushed to
-    target_branch: # optional
-    # Will build the Jekyll site without publishing it
-    build_only: # optional
-    # Do not overwrite whatever was already published on the target branch
-    keep_history: # optional
-    # Commands to run prior to build and deploy. Useful for ensuring build dependencies are up to date or installing  new dependencies. For example, use `apk --update add  imagemagick` to install ImageMagick.
+name: Jekyll site CI
 
-    pre_build_commands: # optional
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Jekyll Actions
+        # You may pin to the exact commit or the version.
+        # uses: helaili/jekyll-action@d305e465c911226c731afb6db07c8bde20e03ced
+        uses: helaili/jekyll-action@2.2.0
+    
